Rename APIUtils to TracingUtils, extract a constant for '__UNKNOWN__', and simplify method.